# sportspy

./: README.md  setup.cfg
sportspy/: anthropometry.py  load.py
sportspy/performance_evaluation/: endurance.py
sportspy/sports/: cricket.py
