[metadata]
name = sportspy
version = 0.0.3
author = Swetank Pathak
author_email = swetankpathak@gmail.com
description = Sportspy package will be going to help sports statisticians , sports analyst and sports scientist to analyze team or individuals performance and fitness.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pathakswetank/sportspy
project_urls =
    Bug Tracker = https://github.com/pathakswetank/sportspy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
